# Build all examples
add_subdirectory(bloom)
add_subdirectory(computecloth)
add_subdirectory(computecullandlod)
add_subdirectory(computeheadless)
add_subdirectory(computenbody)
add_subdirectory(computeparticles)
add_subdirectory(computeshader)
add_subdirectory(debugmarker)
add_subdirectory(deferred)
add_subdirectory(deferredmultisampling)
add_subdirectory(deferredshadows)
add_subdirectory(displacement)
add_subdirectory(distancefieldfonts)
add_subdirectory(dynamicuniformbuffer)
add_subdirectory(gears)
add_subdirectory(geometryshader)
add_subdirectory(hdr)
add_subdirectory(imgui)
add_subdirectory(indirectdraw)
add_subdirectory(instancing)
add_subdirectory(mesh)
add_subdirectory(multisampling)
add_subdirectory(multithreading)
add_subdirectory(occlusionquery)
add_subdirectory(offscreen)
add_subdirectory(parallaxmapping)
add_subdirectory(particlefire)
add_subdirectory(pbrbasic)
add_subdirectory(pbribl)
add_subdirectory(pbrtexture)
add_subdirectory(pipelines)
add_subdirectory(pipelinestatistics)
add_subdirectory(pushconstants)
add_subdirectory(radialblur)
add_subdirectory(raytracing)
add_subdirectory(renderheadless)
add_subdirectory(scenerendering)
add_subdirectory(screenshot)
add_subdirectory(shadowmapping)
add_subdirectory(shadowmappingomni)
add_subdirectory(shadowmappingcascade)
add_subdirectory(skeletalanimation)
add_subdirectory(specializationconstants)
add_subdirectory(sphericalenvmapping)
add_subdirectory(ssao)
add_subdirectory(stencilbuffer)
add_subdirectory(subpasses)
add_subdirectory(terraintessellation)
add_subdirectory(tessellation)
add_subdirectory(textoverlay)
add_subdirectory(texture)
add_subdirectory(texture3d)
add_subdirectory(texturearray)
add_subdirectory(texturecubemap)
add_subdirectory(texturemipmapgen)
add_subdirectory(texturesparseresidency)
add_subdirectory(timestampquery)
add_subdirectory(triangle)
add_subdirectory(viewportarray)
add_subdirectory(vulkanscene)
